--- a/_posts/2025-01-13-EVN_scam.md
+++ b/_posts/2025-01-13-EVN_scam.md
@@ -24,11 +24,13 @@ _...Điều đáng lưu ý ở đây là scammer đọc đúng thông tin cá nh
 - Khi đã note lại các thông tin cá nhân của khách hàng, họ sẽ yêu cầu bạn mở app ngân hàng cần liên kết. Lúc này, scammer sẽ yêu cầu bạn vào biến động giao dịch để kiểm tra.
 - Sau khi đã có thông tin số dư tài khoản scammer sẽ đưa cho bạn hình ảnh 1 mã QR gọi là QR để liên kết tài khoản ngân hàng với hệ thống thanh toán của EVN, yêu cầu bạn xác thực lại tất cả thông tin được bao gồm trong hình ảnh mã QR, bao gồm thông tin khách hàng (được đính kém dưới bài viết) và những thông tin khách hàng đó thật ra không đem lại bất cứ ý nghĩa gì vào lúc này, quan trọng là có gì bên trong mã QR kia?.
 
+![alt text](/assets/img/photo_2025-01-13_15-52-22-1.jpg)
 
 Cuối cùng scammer yêu cầu bạn tải QR và lưu vào máy (bước này an toàn, tại sao an toàn thì mình sẽ giải thích phía dưới) và mở lại app ngân hàng cần liên kết, vào phần quét mã QR của app. Lúc này họ sẽ yêu cầu mình đặt CCCD lên chính giữa màn hình điện thoại để xác thực :))))))))))). Đồng thời chọn ảnh QR vừa lưu lúc nãy để thực hiện "XÁC THỰC THÔNG TIN LIÊN KẾT". Nếu bạn ấn Tiếp tục và nhập OTP -> Toàn bộ tiền trong tài khoản của bạn sẽ được chuyển về tài khoản của scammer, lúc này khóc lóc van xin cũng đã muộn do lúc thao tác, toàn bộ thông tin giao dịch lúc đó đã bị chính cái CCCD "đang xác thực" của bạn che lại trong lúc bạn thực hiện giao dịch.
 
 *Điều đáng nói ở đây là không có cái gì gọi là thủ đoạn cao siêu hay bị hack hết tiền trong tài khoản ở đây cả, tất cả chỉ là chuyển tiền thông thường từ tài khoản của mình sang tài khoản người khác thông qua mã QR và mọi thông tin chuyển tiền đã bị chính bạn che lại (tự lấy CCCD che giữa màn hình điện thoại để XÁC THỰC THÔNG TIN LIÊN KẾT) trong khi những cái bạn đã che là **Thông tin người nhận** và **Số tiền được chuyển**. Mọi sự lầm tưởng lúc đó bạn vẫn nghĩ là bạn đang XÁC THỰC THÔNG TIN LIÊN KẾT từ TK ngân hàng tới EVN.*
 
+![alt text](/assets/img/photo_2025-01-13_15-52-21.jpg)
  
 **POV:**
 
@@ -39,3 +41,4 @@ Cuối cùng scammer yêu cầu bạn tải QR và lưu vào máy (bước này 
 - Những thông tin cá nhân của bạn không có ý nghĩa đối với mã QR scammer đã gửi cho bạn, đó chỉ là những thủ tục của sự chuyên nghiệp dẫn dắt bạn đến đúng đích đến họ cần, đich đến đó có thể làm bánh chưng của bạn năm nay "bay hết cả nhân". Tất cả những thuộc tính bao gồm trong mã QR đó đơn thuần chỉ là một mã QR chuyển tiền thông thường bao gồm **Số tài khoản của scammer** và **Số tiền được chuyển**.
 - Về khả năng nguy hiểm khi tải hình ảnh xuống. Mọi định dạng của hình ảnh khi được gửi thông qua mạng xã hội (Facebook, Zalo, ...) đều được lưu ở máy chủ và sẽ được chuẩn hóa về một định dạng chung (JPEG) khi bạn tải xuống. Tính cho đến nay, không thể chèn malware vào file có định dạng JPEG, vì vậy, việc tải xuống là an toàn.
 - Lúc bạn vừa thao tác vừa nghe điện thoại và làm theo hướng dẫn ít nhiều đã làm bạn phân tâm vì bạn đang thực hiện nhiều việc cùng một lúc trong lúc thực hiện theo hướng dẫn. Từ đó khả năng cuộc scam sẽ tăng nhiều tỉ lệ thành công hơn.
+- Điều đáng lưu ý là ở mã QR có đề cập đến "Thời gian hiệu lực 60s", đây là một chiêu để để có thể chuyển tiền nhiều lần với lý do là "Mã đã hết thời gian hiệu lực, cần thao tác lại khi sự thật không phải vậy", tiền trong tài khoản vẫn cứ bay không hề hay biết :D. Ngoài ra, đây cũng là một tác động đến tâm lý của nạn nhân về việc thao tác nhanh chóng để tránh việc "Hết thời gian hiệu lực" của mã QR và cần thao tác lại. Trong khi mọi người luôn hiểu rằng nếu quá gấp gáp thì sẽ tăng khả năng xảy ra sơ suất trong mọi tình huống, bao gồm cả suy nghĩ về những công việc mình đang làm.
