--- a/_posts/2025-01-13-EVN_scam.md
+++ b/_posts/2025-01-13-EVN_scam.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: CHIÊU TRÒ MẠO DANH ĐIỆN LỰC EVN ĐƯỢC THỰC HIỆN NHƯ THẾ NÀO
-subtitle: Dạo này có nghe đến vụ giả mạo bên Điện lực EVN rất tinh vi, rất may mắn sáng nay mình trở thành nạn nhân :)) Tầm 10h sáng đột nhiên nhận được một cuộc gọi với nội dung: ...
+subtitle: Dạo này có nghe đến vụ giả mạo bên Điện lực EVN rất tinh vi, rất may mắn sáng nay mình trở thành nạn nhân ^^. Tầm 10h sáng đột nhiên nhận được một cuộc gọi với nội dung...
 tags: [social_engineering, phishing, scam]
 author: VuNguyen
 ---
