--- a/_posts/2025-01-13-EVN_scam.md
+++ b/_posts/2025-01-13-EVN_scam.md
@@ -17,7 +17,7 @@ _...Điều đáng lưu ý ở đây là scammer đọc đúng thông tin cá nh
 
 Đầu tiên, scammer sẽ yêu cầu 2 thiết bị, 1 thiết bị để call với chúng nó để quay lại thao tác (optional), 1 thiết bị để thao tác theo những gì chúng nó nói (required). Nếu bạn không có đủ 2 thiết bị thì sao ? Không sao, các "chuyên viên tư vấn của Điện lực EVN" sẽ tận tình hướng dẫn bạn liên kết tài khoản vào app chính thống của EVN cho đến cái cách bạn ấn nút chuyển tiền như thế nào :D.
 
-**Thủ tục của cuộc lừa đảo**
+**Thủ tục**
 
 - Scammer sẽ hướng dẫn các bạn vào App Store để tải app Epoint EVN. Bước này hoàn hoàn vô hại vì mình kiểm tra app được tải về là chính thống. Tuy nhiên, đây là bước để tạo dựng được cái niềm tin với người thực hiện (đối với người có am hiểu một chút gì đó về cái gì chính thống, cái gì là app rác hoặc virus hoặc mã độc gì đó theo ngôn ngữ thường hay truyền tai nhau của mọi người thông thường). Còn đối với những người không am hiểu thì có vẻ cái gì cũng sẽ là "chính thống" :D.
 - Sau khi tải app về bước tiếp theo là mặc kệ nó :)) vì đã tạo dựng niềm tin xong. Lúc này, các chuyên viên tư vấn sẽ xin thông tin cá nhân của bạn, bao gồm Họ tên, Số điện thoại và cần CCCD để xác thực liên kết với ngân hàng. Để làm gì? Chả để làm gì, đó chỉ là thủ tục tạo sự "nghiêm túc"
